add image to homepage

--- a/home.html
+++ b/home.html
@@ -44,6 +44,13 @@
         </section>
         <!-- End of Login Section -->
     </main>
+    
+    <!-- Image Section -->
+    <section id="image-section">
+        <h2>Placeholder Image</h2>
+        <!-- Image tag with the source attribute pointing to the image file -->
+        <img src="placeholder-image.png" alt="Placeholder Image">
+    </section>
 
     <!-- Footer Section -->
     <footer>
