add image and image css

--- a/home.html
+++ b/home.html
@@ -45,12 +45,20 @@
         <!-- End of Login Section -->
     </main>
     
-    <!-- Image Section -->
-    <section id="image-section">
-        <h2>Placeholder Image</h2>
-        <!-- Image tag with the source attribute pointing to the image file -->
-        <img src="placeholder-image.png" alt="Placeholder Image">
-    </section>
+<!-- Image Section -->
+<section id="image-section">
+    <h2 id="images-heading">App Images</h2>
+    <!-- First image with title -->
+    <div class="image-container">
+        <h3>Interface</h3>
+        <img src="interface.jpg" alt="App Interface" class="image">
+    </div>
+    <!-- Second image with title -->
+    <div class="image-container">
+        <h3>Pop-up</h3>
+        <img src="pop-up.jpg" alt="Pop-up Image" class="image">
+    </div>
+</section>
 
     <!-- Footer Section -->
     <footer>
