add under construction section

--- a/home.html
+++ b/home.html
@@ -45,21 +45,28 @@
         <!-- End of Login Section -->
     </main>
     
-<!-- Image Section -->
-<section id="image-section">
-    <h2 id="images-heading">App Images</h2>
-    <!-- First image with title -->
-    <div class="image-container">
-        <h3>Interface</h3>
-        <img src="interface.jpg" alt="App Interface" class="image">
-    </div>
-    <!-- Second image with title -->
-    <div class="image-container">
-        <h3>Pop-up</h3>
-        <img src="pop-up.jpg" alt="Pop-up Image" class="image">
-    </div>
-</section>
+    <!-- Image Section -->
+    <section id="image-section">
+        <h2 id="images-heading">App Images</h2>
+        <!-- First image with title -->
+        <div class="image-container">
+            <h3>Interface</h3>
+            <img src="images/interface.jpg" alt="App Interface" class="image">
+        </div>
+        <!-- Second image with title -->
+        <div class="image-container">
+            <h3>Pop-up</h3>
+            <img src="images/pop-up.jpg" alt="Pop-up Image" class="image">
+        </div>
+    </section>
 
+    <!-- Under Construction Section -->
+    <section id="under-construction">
+        <h2>Under Construction</h2>
+        <img src="images/under-construction.jpg" alt="Under Construction Image">
+        <p>This page is currently under construction. Please check back later.</p>
+    </section>
+    
     <!-- Footer Section -->
     <footer>
         <p>&copy; 2024 Rabadon's Grimoire. All rights reserved.</p>
