--- a/about.html
+++ b/about.html
@@ -31,7 +31,14 @@
             <p>Introducing our League of Legends Companion App - Rabadon’s Grimoire - the ultimate tool for dedicated players who demand peak performance. Unlike other apps weighed down by unnecessary bloatware, our app will be aiming for lightning-fast system processing. Stay ahead of the game with real-time match stats, customizable builds, and strategic insights at your fingertips. Elevate your gameplay experience by just one click and join the league of efficient gamers!</p>
         </section>
     </main>
-
+        
+    <!-- Under Construction Section -->
+    <section id="under-construction">
+        <h2>Under Construction</h2>
+        <img src="images/under-construction.jpg" alt="Under Construction Image">
+        <p>This page is currently under construction. Please check back later.</p>
+    </section>
+        
     <!-- Footer Section -->
     <footer>
         <p>&copy; 2024 Rabadon's Grimoire. All rights reserved.</p>
