--- a/download.html
+++ b/download.html
@@ -33,6 +33,13 @@
         </section>
     </main>
 
+    <!-- Under Construction Section -->
+    <section id="under-construction">
+        <h2>Under Construction</h2>
+        <img src="images/under-construction.jpg" alt="Under Construction Image">
+        <p>This page is currently under construction. Please check back later.</p>
+    </section>
+
     <!-- Footer Section -->
     <footer>
         <p>&copy; 2024 Rabadon's Grimoire. All rights reserved.</p>
